--- a/major_assignments/reverse_engineering/reverse_engineering_template.Rmd
+++ b/major_assignments/reverse_engineering/reverse_engineering_template.Rmd
@@ -68,20 +68,21 @@ dono_count <- donos_clean %>%
   group_by(owner, party) %>%
   summarise(tot_dono = sum(amount)) %>%
   pivot_wider(names_from = party, values_from = tot_dono) %>%
-  replace(is.na(.), 0)
+  replace(is.na(.), 0) %>%
+  clean_names()
 
 dono_count$top_party = colnames(dono_count)[apply(dono_count,1,which.max)]
 
 count_republican <- dono_count %>%
-  filter(str_detect(top_party, "Republican")) %>%
+  filter(str_detect(top_party, "republican")) %>%
   nrow()
 
 count_democrat <- dono_count %>%
-  filter(str_detect(top_party, "Democrat")) %>%
+  filter(str_detect(top_party, "democrat")) %>%
   nrow()
 
 count_other <- dono_count %>%
-  filter(!(top_party == "Democrat" | top_party == "Republican")) %>%
+  filter(!(top_party == "democrat" | top_party == "republican")) %>%
   nrow()
 
 donor_count <- donos_clean %>%
@@ -156,26 +157,76 @@ wnba_republican <- wnba_donos %>%
 
 ### Sentence 4
 
-* **Sentence text**: 
+* **Sentence text**: “A relatively small group of donors makes up a huge chunk of the overall donation data. Forty owners account for more than $40 million — more than 85 percent of all contributions. And looking specifically at these big spenders, it’s clear where their allegiances lie: 77.7 percent of that $40 million went to Republican causes or candidates, with 18.8 percent going to Democrats.”
 
-* **Analysis summary**: [Write up two to three sentences describing the results of your analysis.  Were you able to confirm the finding? If not, why not?]
+* **Analysis summary**: First sentence is correct (41 mill). We were able to find a close percentage to the amount from the 40 million going to either Republican or Democrat causes, but they were still not the exact numbers from the article. We tried adding in the top sums from bipartisan but mostly Republican/Democratic to see if it would make a difference, but it was not significant enough so we included it just in case. We also found that the top percent of contributions was indeed over 85, it was 88.9. Overall, we could not say for certainty that the author's numbers were ones that we found, with our numbers being slightly off. He found 77.7% and 18.8%, whereas we found 20.8% and 75.8%
 
 ```{r}
 # Put code to reverse engineer sentence here
 
+total_donos <- donos_clean %>%
+  group_by(owner) %>%
+  summarise(
+    tot_donos = sum(amount)
+  ) %>%
+  arrange(desc(tot_donos)) %>%
+  head(40)
+
+top_sum = sum(total_donos$tot_donos)
+sum_all = sum(donos_clean$amount)
+top_percent = top_sum/sum_all*100
+
+top_dono_distribution <- total_donos %>%
+  left_join(dono_count, by =c("owner"))
+
+# Finding sum and percentages of the democratic and republican spending by the owners. 
+
+sum_dem = sum(top_dono_distribution$democrat) # + sum(top_dono_distribution$bipartisan_but_mostly_democratic)
+percent_dem = sum_dem/top_sum*100
+sum_rep = sum(top_dono_distribution$republican) # + sum(top_dono_distribution$bipartisan_but_mostly_republican)
+percent_rep = sum_rep/top_sum*100
+
 # Display results of code below this codeblock
+
+top_sum
+percent_dem
+percent_rep
 
 ```
 
 ### Sentence 5
 
-* **Sentence text**: [Paste in sentence to engineer here]
-* **Analysis summary**: [Write up two to three sentences describing the results of your analysis.  Were you able to confirm the finding? If not, why not?]
+* **Sentence text**: “And when we isolate just the big-ticket donations topping $100,000 from this group, a familiar picture emerges. More than 63 percent of the $47 million in the database of nearly 3,000 contributions comes from just 108 donations split among these 40 owners — and 79 percent of that money went to Republican causes.”
+
+* **Analysis summary**: We found that 62%, not 63% of the 47 million in the database comes from top donors. We tried to see if there were smaller donations that added up to 100000 were being made, not *donations of over 100,000 made by top 40 owners (singular), but we still got 104 donations not 108. 
 
 ```{r}
 # Put code to reverse engineer sentence here
 
+top_filter <- donos_clean %>%
+  inner_join(total_donos, by = "owner") %>%
+  # Tried group donations made by one owner in one year to one recipient, but results were the same
+  # group_by(owner, election_year, recipient) %>%
+  # summarise(dono_pool = sum(amount)) %>%
+  # filter(dono_pool >= 10000)
+  
+filter(amount >= 10000)
+
+big_donos_sum = sum(top_filter$amount)
+big_percent = big_donos_sum/sum_all*100
+big_count = nrow(top_filter)
+
+top_republican <- top_filter %>%
+  filter(party == "Republican")
+
+sum_republican_top = sum(top_republican$amount)
+percent_rep_top = sum_republican_top/big_donos_sum * 100
+
+
 # Display results of code below this codeblock
+big_percent
+big_count
+percent_rep_top
 
 ```
 
