--- a/labs/lab_10/lab_10.rmd
+++ b/labs/lab_10/lab_10.rmd
@@ -67,7 +67,7 @@ ggplot() +
 
 **Q2.** Make a county-level map to explore the number of customers impacted by power outages in Maryland. Load the `county_outages_march2023.csv` file in the data folder and calculate a rate of customers with outages per 10,000 total customers for each county. Then join that dataframe to your Maryland counties dataframe you made in Q1 and create a county-level map of the results; you may need to tweak the fill scale to make the distinctions clearer. What's the potential story here? Given access to other months' outage data, what would your next steps be in reporting a story?
 
-**A2.** Talbot County has a higher rate of power outages per capita than any other county by far during the month of March. I feel like the story here has to do with Talbot County infrastructure and how they might be unable to keep the power during the storm season of March? I would want to see the summer months and how summer storms affect Talbot county. 
+**A2.** Talbot County has a higher rate of power outages per capita than any other county by far during the month of March. I feel like the story here has to do with Talbot County infrastructure and how they might be unable to keep the power during the storm season of March? I think another angle could be the serious problems that climate change creates for communities like Talbot County. Maybe the increase in storms and heavy wind/flooding could show how that creates a serious issue that needs to be fixed. I would want to see the summer months and how summer storms and high wind affect Talbot county, and see if more power outages affect different counties like that, especially near the bay. 
 
 ```{r}
 outages_by_county <- read_csv("data/county_outages_march2023.csv")
@@ -95,9 +95,9 @@ Finally, make a second county map showing the per capita rate. What counties sta
 **A3.** 1st Map: Caroline County most 
 2nd Map: Howard and Montgomery counties with the most
 
-So for the first map, definitely Caroline County has the most electric vehicles that have changed over time. All of the counties have at least changed by 100% too, so a story could revolve around the initiatives towards sustainability in Maryland this past year. 
+So for the first map, definitely Caroline County has the most electric vehicles that have changed over time. All of the counties have at least changed by 100% too, so a story could revolve around the initiatives towards sustainability in Maryland this past year. Questions I have pertain to why certain counties have so many electric vehicles in the first place. Are they wealthier counties? 
 
-When it comes to the per capita rate, Montgomery and Howard Counties stand out as the most per every 10,000 people. I think this could be more indicative of how many people are actually getting electric vehicles, especially since Caroline County had only 42% per capita rate. 
+When it comes to the per capita rate, Montgomery and Howard Counties stand out as the most per every 10,000 people. I think this could be more indicative of how many people are actually getting electric vehicles, especially since Caroline County had only 42% per capita rate. It's different because it shows completely different counties as showing progress for the electric vehicle. My question is: what's more accurate? Also, what's the factor that's causing a lot of progress for certain/one or two counties instead of all of the counties? 
 
 Mainly, this might have to do with the Clean Cars II Rule Wes Moore instituted in 2023. 
 
