--- a/pre_labs/pre_lab_12/pre_lab_12.Rmd
+++ b/pre_labs/pre_lab_12/pre_lab_12.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "pre_lab_12.Rmd"
-author: "derek willis"
+author: "caroline koutsos"
 date: "2023-04-28"
 output: html_document
 ---
@@ -23,11 +23,12 @@ To do this, we'll need a new library -- [tidytext](https://cran.r-project.org/we
 **Task** Run the following code in the gray-colored codeblock below to load the libraries we'll use.
 
 ```{r}
-#install.packages("tidytext")
+install.packages("tidytext")
 library(tidyverse)
 library(tidytext)
 library(janitor)
 library(lubridate)
+library(rvest)
 ```
 
 Remember the end of the previous lab, where you scraped all of those press release links from Maryland Sen. Ben Cardin's website? We're going to take that one step further and analyze the actual text of those releases using tidytext. Our starting question: what words or phrases appear most in Cardin's press releases?
@@ -38,7 +39,7 @@ Let's read in this data and examine it:
 
 ### Task 2: Read in data
 **Task** Run the following code and describe the dataframe it outputs.
-**Answer**
+**Answer** data that we scraped last week plus a fourth column: text of each press release
 
 ```{r}
 releases <- read_rds("data/cardin_releases.rds")
@@ -86,7 +87,7 @@ If you are trying to create a list of unique words, R will treat differences in 
 
 ### Task 5: Trying out unique
 **Task** Run the following code and describe what the `unique` function does to the original list of words.
-**Answer**
+**Answer** It gives the unique values but doesn't give enough uniqueness aka gives the same word twice saying that Dog and dog are both unique when they really aren't 
 
 ```{r}
 a_list_of_words <- c("Dog", "dog", "dog", "cat", "cat", ",")
@@ -97,7 +98,7 @@ Fortunately, this is a solved problem with tidytext, which has a function called
 
 ### Task 6: Trying out unnest_tokens
 **Task** Run the following code and describe the output of using the `unnest_tokens` function.
-**Answer**
+**Answer** made a new dataframe of one column called word with 647091 rows by giving us only a few words that are "unique"
 
 ```{r}
 unique_words <- releases %>% select(text) %>%
@@ -107,7 +108,7 @@ View(unique_words)
 
 ### Task 7: Make a column chart
 **Task** Run the following code and describe what the resulting graphic shows. Is it interesting?
-**Answer**
+**Answer** gives us top 25 words (the, and, to, of, in) all super common words. not interesting
 
 Now we can look at the top words in this dataset. Let's limit ourselves to making a plot of the top 25 words, and we'll use the function `count` to do the counting:
 
@@ -156,7 +157,7 @@ From there, we can get a simple word frequency by just grouping them together an
 
 ### Task 9: Using anti_join
 **Task** Run the following code and describe the results. Is it more interesting than before?
-**Answer**
+**Answer** getting rid of a word that's in unique words and stop words. leaving us with more "unique" words.
 
 ```{r}
 unique_words %>%
@@ -193,7 +194,7 @@ Then we can create top 10 lists for both of them and compare:
 
 ### Task 11: Create dataframes with the top 10 words in each year
 **Task** Run the following code and describe the results.
-**Answer**
+**Answer** 2021: covid, health, 19, communities 2022: health, baltimore, funding 2023: women, rights, fire, etc 2023 is different than 2022 and 2021. we have single words that stand out to us w tiny percentages 
 
 ```{r}
 unique_words_2021 %>%
@@ -238,7 +239,7 @@ So this block is is going to do the following:
 
 ### Task 12: Create a dataframe with the top 10 two-word phrases for 2021
 **Task** Run the following code and describe the results.
-**Answer**
+**Answer** for a two word phrase, we don't want either word in our stop words. after we get the bigram, they have to be broken apart again and test to see if the word is in our stop words (then filter it out) != exclude filter. everything left over is a bigram we want to include
 
 ```{r}
 releases %>%
@@ -258,7 +259,7 @@ And we already have a different, more nuanced result. Health was among the top s
 
 ### Task 13: Create a dataframe with the top 10 two-word phrases for 2022
 **Task** Run the following code and describe the results.
-**Answer**
+**Answer** just 2022, covid 19 is still there but not as significant (project location funding, amount included, baltimore city)
 
 ```{r}
 releases %>%
@@ -278,7 +279,7 @@ And 2023?
 
 ### Task 14: Create a dataframe with the top 10 two-word phrases for 2023
 **Task** Run the following code and describe the results.
-**Answer**
+**Answer** 2023: offshore wind, tax credit, equal rights, etc. different issues than before and focusing on different priorities. oral health???
 
 ```{r}
 releases %>%
@@ -304,7 +305,7 @@ Another popular use of text analysis is to measure the sentiment of a word - whe
 
 ### Task 15: Load the bing lexicon and produce sentiments for our 2021-2023 unique words
 **Task** Run the following code and describe the results. Do any of the sentiments seem incorrect or counter-intuitive?
-**Answer**
+**Answer** positive or negative connotation (context matters) for words. 
 
 ```{r}
 bing <- get_sentiments("bing")
